hphp/test/zend/good/Zend/tests/ns_057.php.expectf
const ok
func ok
const ok
const ok
var ok
method ok
const ok
const ok
class ok
ok

Fatal error: Undefined constant 'Test\ns1\unknown' in %s/ns_057.php on line 42
